--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
     "morgan": "^1.7.0",
+    "mysql": "^2.12.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.8.1",
