--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "date-and-time": "^0.3.0",
     "fs-extra": "^0.30.0",
+    "jquery": "^3.1.1",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
