--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "date-and-time": "^0.3.0",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^0.30.0",
     "jquery": "^3.1.1",
     "mobx": "^2.2.2",
